# ureca26

./: LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
configs/: experiment.yaml  experiment_mistral.yaml
docs/: research_guide.md
findings/: 01_initial_results.md  02_entity_token_results.md
notebooks/: exploration.ipynb  llama_self_representation_mechanistic_interp.ipynb  run_experiment_colab.ipynb
scripts/: 01_generate_prompts.py  02_extract_activations.py  03_find_directions.py  04_test_specificity.py  05_visualize.py  06_causal_validation.py
src/: __init__.py  conditions.py  dataset.py  directions.py  extraction.py  specificity.py  steering.py  verification.py  visualization.py
